2004-10-25 Derek Price <derek@ximbiot.com>

	* import.c (import): Repair regex for regressions introduced in last
	commit.
	* sanity.sh (import-quirks): Test a few branch numbers import shouldn't
	have a problem with.

2004-10-25  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (modes3): Quiet rsync messages in proxy mode when
	permissions are removed. They are expected and not a problem here.

2004-10-25 Derek Price <derek@ximbiot.com>

	* import.c (import): Anchor and simplify branch verification regex.
	* sanity.sh (import-quirks): Test another pattern that should fail.

2004-10-25 Derek Price <derek@ximbiot.com>

	* cvs.h (yesno): Remove prototype.
	* edit.c, release.c: Include yesno.h.  Flush output before calling
	yesno().

2004-10-25  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (tagdate): Added some additional tests and FIXCVS
	comments for dealing properly with a 'cvs add' of a file to
	a branch that already exists on the mainline.
	(Problem reported by Renny Barrett <rbarrett@curamsoftware.com>.)

	* sanity.sh (getrlogdate): New shell function.
	(tagdate-{13,14,16}): Use it to avoid 'sleep 60' by using
	the exact 1.1.4.1 timestamp for tagdate-14 and tagdate-16.
	
2004-10-25 Derek Price <derek@ximbiot.com>

	* sanity.sh (depends_on_rsync): Redirect rsync output to /dev/null when
	just testing.

2004-10-23  Mark D. Baushke  <mdb@cvshome.org>

	* socket-client.c (socket_buffer_initialize): Drop obsolete
	arguments to buf_initialize().

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* client.c (handle_m, handle_e): Winsock is returning
	SOCK_ERRNO == WSAENOTSOCK for select() problems and not
	setting errno. Do not bother with printing an error from a
	select() that is not returning an non-zero errno.
	(Report from Conrad T. Pino <Conrad@Pino.com>.)

2004-10-22  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (proxy): proxycheck depends on rsync, but skip all if
	no rsync is found rather than generate an error return.
